--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <!-- instant redirect to index.json so requesting /crackmexd returns JSON -->
-  <meta http-equiv="refresh" content="0; url=./index.json">
-  <title>Redirecting…</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=https://crackme.tranlongdo2506.workers.dev/crackmexd" />
+
   <script>
-    // fallback JS redirect for clients that execute JS
-    window.location.replace('./index.json');
+    window.location.href = "https://crackme.tranlongdo2506.workers.dev/crackmexd";
   </script>
+
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+      color: #333;
+    }
+    a {
+      color: #007bff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+  </style>
 </head>
 <body>
-  Redirecting to JSON…
+  <div>
+    <h1>Redirecting…</h1>
+    <p>If you are not redirected automatically, <a href="https://crackme.tranlongdo2506.workers.dev/crackmexd">click here</a>.</p>
+  </div>
 </body>
 </html>
